--- a/dev/bbslider.less
+++ b/dev/bbslider.less
@@ -1,11 +1,10 @@
 .bbslider-bar {
   height: 50px;
-  width: 500px;
+  width: 100%;
   display: inline-block;
   background: red;
   position: relative;
   border: 0 !important;
-  margin: 10px;
   box-sizing: border-box;
 
   .bbslider-ghost,
