add remove option

--- a/dev/bbslider.less
+++ b/dev/bbslider.less
@@ -1,7 +1,11 @@
+.bbslider-slider{
+  display: block;
+}
+
 .bbslider-bar {
   height: 50px;
   width: 100%;
-  display: inline-block;
+  display: block;
   background: red;
   position: relative;
   border: 0 !important;
@@ -60,6 +64,7 @@
     }
 
     .bbslider-remove-popup {
+      color: white;
       transition: 0.5s;
       position: absolute;
       background: gray;
