--- a/dev/bbslider.less
+++ b/dev/bbslider.less
@@ -89,4 +89,12 @@
       }
     }
   }
+
+  &.bbslider-readonly{
+    .bbslider-left-handler,
+    .bbslider-right-handler,
+    .bbslider-range{
+      cursor: default;
+    }
+  }
 }
