--- a/dev/bbslider.less
+++ b/dev/bbslider.less
@@ -1,4 +1,5 @@
-@blue: #128dc3;
+@bbslider-bg: #128dc3;
+@bbslider-color: #ffffff;
 
 .bbslider-slider{
   display: block;
@@ -8,10 +9,19 @@
   height: 50px;
   width: 100%;
   display: block;
-  background: lighten(@blue, 48%);
+  background: lighten(@bbslider-bg, 48%);
   position: relative;
   border: 0 !important;
   box-sizing: border-box;
+
+  .bbslider-label {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    line-height: 50px;
+    display: inline;
+    color: @bbslider-color;
+  }
 
   .bbslider-ghost,
   .bbslider-range {
@@ -21,23 +31,23 @@
   }
 
   .bbslider-ghost {
-    color: white;
+    color: @bbslider-color;
     background: rgba(0,0,0,0.25);
     cursor: pointer;
   }
   .bbslider-range {
-    background: lighten(@blue, 23%);
+    background: lighten(@bbslider-bg, 23%);
     cursor: move;
     -webkit-user-drag: none;
     &.bbslider-pressed {
-      background: lighten(@blue, 18%);
+      background: lighten(@bbslider-bg, 18%);
     }
 
     .bbslider-left-handler,
     .bbslider-right-handler {
       position: absolute;
       width: 8px;
-      background: lighten(@blue, 10%);
+      background: lighten(@bbslider-bg, 10%);
       height: 100%;
       cursor: ew-resize;
       -webkit-user-drag: none;
@@ -67,7 +77,7 @@
     }
 
     .bbslider-remove-popup {
-      color: white;
+      color: @bbslider-color;
       transition: 0.5s;
       position: absolute;
       background: gray;
