rename methods names.

--- a/dev/multirangeslider.less
+++ b/dev/multirangeslider.less
@@ -3,6 +3,10 @@
 
 .multirangeslider-slider {
   display: block;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
